--- a/templates/views/home.hbs
+++ b/templates/views/home.hbs
@@ -26,6 +26,21 @@
             </div>
         </div>
     </section>
+
+    <section id="overlay">
+        <div id="modalContainer">
+            <div id="modal">
+                <div id="messageBox" class="mar-b-s">
+                    <p id="message">some message</p>
+                </div>
+                <form action="#" method="post">
+                    <input type="text" name="name" id="name" placeholder="Enter a name to save under" class="mar-b-s" required>
+                    <input type="submit" value="Save Score" id="saveScoreModal">
+                </form>
+            </div>
+        </div>
+    </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.js"></script>
     <script src="./js/home.js" type="module"></script>
 </body>
 </html>
