--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -5,7 +5,7 @@
             </div>
             <div id="menu">
                 <a href="/" id="home">Home</a>
-                <a href="#" id="leaderBoards" class="mar-l-s">LeaderBoards</a>
+                <a href="/leaderboards" id="leaderBoards" class="mar-l-s">LeaderBoards</a>
             </div>
         </section>
 </header>
